force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/BSF_Workday_Direct_Submission_Config__mdt.object-meta.xml
<CustomObject>
    <label>Workday Direct Submission Config</label>
    <pluralLabel>Workday Direct Submission Configs</pluralLabel>
</CustomObject>