force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_Attach_Workday_XML_Log__c.field-meta.xml
<CustomField>
    <fullName>sked_Attach_Workday_XML_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, full Workday Import SOAP request XML and full Employee Report JSON responses are stored as Files on the related sked__Debug_Log__c rows (plus short previews in the log body). Turn off to save storage or skip file DML.</description>
    <label>Attach Full Workday XML To Debug Log</label>
    <type>Checkbox</type>
</CustomField>