force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_Business_Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>sked_Business_Distribution_List__c</fullName>
    <description>Comma-separated email addresses for success notifications (Op Record Processing Complete).</description>
    <label>Business Distribution List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>