force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_Enable_Direct_Workday_Submission__c.field-meta.xml
<CustomField>
    <fullName>sked_Enable_Direct_Workday_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, UI saves as Draft and batch submits to Workday; when false, existing Azure path is used.</description>
    <label>Enable Direct Workday Submission</label>
    <type>Checkbox</type>
</CustomField>