force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_Notification_From_Email__c.field-meta.xml
<CustomField>
    <fullName>sked_Notification_From_Email__c</fullName>
    <description>From address for op record processing notification emails. Must match an Org-Wide Email Address.</description>
    <label>Notification From Email</label>
    <type>Email</type>
</CustomField>