force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_Op_Record_CreatedDate_Offset__c.field-meta.xml
<CustomField>
    <fullName>sked_Op_Record_CreatedDate_Offset__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>Day offset (in days) from today used by the Ops Record Workday Submission batch to select op records by CreatedDate. -1 = yesterday (default), 0 = today, etc.</description>
    <label>Op Record CreatedDate Offset (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>