force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_Ops_Record_Batch_Scope_Size__c.field-meta.xml
<CustomField>
    <fullName>sked_Ops_Record_Batch_Scope_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Number of operation records per batch execute chunk for BSF_OpsRecordWorkdaySubmissionBatch (1–2000).</description>
    <label>Ops Record Batch Scope Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>