force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_Reschedule_Delay_Minutes__c.field-meta.xml
<CustomField>
    <fullName>sked_Reschedule_Delay_Minutes__c</fullName>
    <description>When the batch finishes with errors, reschedule after this many minutes. Used only for error retry (max runs controlled by sked_Max_Reschedule_Count__c).</description>
    <label>Reschedule Delay Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>