force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_Technical_Team_Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>sked_Technical_Team_Distribution_List__c</fullName>
    <description>Comma-separated email addresses for technical failure notifications. Preferred over Technical Team Email when populated.</description>
    <label>Technical Team Distribution List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>