force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_WD_Emp_Rpt_URL__c.field-meta.xml
<CustomField>
    <fullName>sked_WD_Emp_Rpt_URL__c</fullName>
    <description>Base URL for Workday Employee Report API (BSF_No_Time_Entered_with_TZ).</description>
    <label>Workday Employee Report API URL</label>
    <type>Url</type>
</CustomField>