force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_WD_End_Date_Param__c.field-meta.xml
<CustomField>
    <fullName>sked_WD_End_Date_Param__c</fullName>
    <description>Query parameter name for drive end date (e.g. End_Date).</description>
    <label>Drive End Date Parameter Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>