force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_WD_Import_Blocks_URL__c.field-meta.xml
<CustomField>
    <fullName>sked_WD_Import_Blocks_URL__c</fullName>
    <description>Optional override for Import Time Blocks endpoint. If blank, use Time_Tracking.</description>
    <label>Workday Import Time Blocks Endpoint</label>
    <type>Url</type>
</CustomField>