force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_WD_Start_Date_Param__c.field-meta.xml
<CustomField>
    <fullName>sked_WD_Start_Date_Param__c</fullName>
    <description>Query parameter name for drive start date (e.g. Start_Date).</description>
    <label>Drive Start Date Parameter Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>