force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_WD_Worker_Param__c.field-meta.xml
<CustomField>
    <fullName>sked_WD_Worker_Param__c</fullName>
    <description>Query parameter name for worker/employee IDs (e.g. Worker).</description>
    <label>Employee IDs Parameter Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>