force-app/main/default/objects/BSF_Workday_Direct_Submission_Config__mdt/fields/sked_Workday_Max_Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>sked_Workday_Max_Retry_Attempts__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum submission retries per staff record. Retries only pick failed staff.</description>
    <label>Max Retry Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>